--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "npm run ui && tsc && node dist/index.js",
+    "start": "node dist/korf-server/src/index.js",
+    "dev": "npm run ui && tsc && npm start",
     "test": "echo \"Error: no test specified\" ",
     "ui:install": "cd korf-ui && npm install",
     "ui:clean": "rimraf public",
