--- a/korf-ui/package.json
+++ b/korf-ui/package.json
@@ -26,6 +26,7 @@
     "@floating-ui/dom": "^1.5.1",
     "flowbite": "^1.8.1",
     "flowbite-svelte": "^0.43.2",
+    "flowbite-svelte-icons": "^0.3.6",
     "tailwind-merge": "^1.14.0"
   }
 }
